Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/format.html
+++ b/format.html
@@ -57,6 +57,9 @@ CatfoOD<br/>
 
 ////////////////////---- 渲染器定义 ---------------------------------------////
 
+// CatfoOD 2010-8-20
+// yanming-sohu@sohu.com
+
 // 渲染器的定义
 var no_render = function(key) {
 	return key;
@@ -90,7 +93,7 @@ var line_render = function (l) {
 		"text-align:center;font-family:Courier'>"+l+"</div>";
 }
 
-// 字体
+// 全局字体
 var font_style = function() {
 	return 'line-height:100%;font-size:x-small';
 }
@@ -104,6 +107,12 @@ var tag_render = function(t) {
 var num_render = function(num) {
 	return "<span style='color:#BC8F8F;'>" + num + "</span>";
 }
+
+// 注释
+var comment_render = function(c) {
+	return "<font style='color:green;'>" + c + "</font>";
+}
+
 
 ////////////////////---- 符号定义 ---------------------------------------////
 
@@ -259,6 +268,7 @@ function parse_src(str) {
 		result.push(line_render(result.line++));
 	}
 	
+	result.push("<font style='" + font_style() + "'>");
 	newline();
 	
 	while(true) {
@@ -269,7 +279,7 @@ function parse_src(str) {
 		
 		// 换行
 		if (ch=='\r') {
-			/*
+			/* 处理'\r\n'的代码
 			when_newline_cleartag();
 			
 			var ch2 = next();
@@ -292,11 +302,14 @@ function parse_src(str) {
 		
 		// 单行注释
 		if (save.comment) {
+			word += ch;
 			continue;
 		}
-		if (ch=='\\') {
+		
+		if (ch=='/') {
 			var ch2 = next();
-			if (ch2 && ch2=='\\') {
+			if (ch2 && ch2=='/') {
+				word += '//';
 				save.comment = true;
 				continue;
 			}
@@ -329,6 +342,7 @@ function parse_src(str) {
 		}
 	}
 	pushWord();
+	result.push("<font/>");
 	
 	return result.join("");;
 }
@@ -338,6 +352,9 @@ function render_word(word, result) {
 	
 	if (word=='\n') {
 		render = enter_render;
+	}
+	else if (word.indexOf('//')==0) {
+		render = comment_render;
 	}
 	else if (word==' ' || word=='\t') {
 		render = sp_render;
